syntax = "proto3";

package wso2.discovery.config.enforcer;

option go_package = "github.com/envoyproxy/go-control-plane/wso2/discovery/config/enforcer;enforcer";
option java_package = "org.wso2.apk.enforcer.discovery.config.enforcer";
option java_outer_classname = "ThreadPoolProto";
option java_multiple_files = true;

// [#protodoc-title: ThreadPool]

// ThreadPool model
message ThreadPool {
    int32 coreSize = 1;

    int32 maxSize = 2;

    // keep alive time of threads in seconds
    int32 keepAliveTime = 3;

    int32 queueSize = 4;
}
